# ec34-unifying-firmware

./: .gitignore  CMakeLists.txt  EC34_BOLT_FEASIBILITY_REPORT_ZH.md  EC34_BOLT_ONLY_DEVELOPMENT_PLAN_ZH.md  EC34_LOGITECH_BOLT_UNIFYING_RESEARCH_ZH.md  EC34_UNIFYING_DEVELOPMENT_STATUS_ZH.md  README.md  UNIFYING_NOW_BOLT_LATER_NOTES_ZH.md
.github/workflows/: host-protocol-check.yml  ncs-bringup-build.yml
firmware/ec34u_unifying_bringup/: CMakeLists.txt  Kconfig  prj.conf
firmware/ec34u_unifying_bringup/src/: main.c
tests/: protocol_smoke.c
tools/: Get-LogitechUnifyingSummary.ps1  Invoke-LogitechHidppReport.ps1  List-LogitechHidCaps.ps1
unifying-prototype/: CMakeLists.txt  README_ZH.md
unifying-prototype/docs/: IMPLEMENTATION_NOTES_ZH.md
unifying-prototype/include/: ec34u_radio_esb_zephyr.h  ec34u_unifying.h
unifying-prototype/src/: ec34u_radio_esb_zephyr.c  ec34u_unifying.c  ec34u_unifying_crypto.c
